[gd_scene load_steps=9 format=3 uid="uid://si08yje5547n"]

[ext_resource type="Script" path="res://scenes/screens/game_end_screen.gd" id="1_5pvtf"]
[ext_resource type="FontFile" uid="uid://cjr6tc40jew43" path="res://assets/font/creepy_circus.ttf" id="2_nfqtp"]
[ext_resource type="PackedScene" uid="uid://b0hr1fn4i0rw" path="res://scenes/ui/background.tscn" id="2_o3cq5"]
[ext_resource type="Texture2D" uid="uid://cktl1kk1nqv3j" path="res://assets/people/void/void-profile-spritesheet.png" id="4_na50v"]
[ext_resource type="AudioStream" uid="uid://b1fhfqtr0ihbh" path="res://assets/audio/music/intro/song-from-a-secret-garden-sad-piano-205576.mp3" id="5_jmoyv"]
[ext_resource type="AudioStream" uid="uid://b08pp02rggsis" path="res://assets/audio/click-button.mp3" id="6_82rof"]
[ext_resource type="AudioStream" uid="uid://koj444wladj" path="res://assets/audio/eerie-ambience.mp3" id="6_me1fq"]
[ext_resource type="AudioStream" uid="uid://bjmokad182h5n" path="res://assets/audio/pencil-writing-foley.mp3" id="7_fm0hu"]

[node name="GameEndScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5pvtf")

[node name="Background" parent="." instance=ExtResource("2_o3cq5")]
layout_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -39.0
offset_right = 39.0
offset_bottom = 85.0
grow_horizontal = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_nfqtp")
text = "A Void"

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_nfqtp")
text = "Start"

[node name="HighscoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_nfqtp")
text = "Highscore"

[node name="VoidProfile" type="Sprite2D" parent="."]
position = Vector2(77, 152)
scale = Vector2(0.367969, 0.367969)
texture = ExtResource("4_na50v")
hframes = 3

[node name="AnimationTimer" type="Timer" parent="."]
autostart = true

[node name="BGMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_jmoyv")
volume_db = -10.0
autoplay = true

[node name="EerieAmbience" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_me1fq")
volume_db = -17.0
autoplay = true

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_82rof")
volume_db = -12.0

[node name="Drawing" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_fm0hu")
volume_db = -20.0
autoplay = true

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="AnimationTimer" to="." method="_on_animation_timer_timeout"]
